# controller/merchantctr/auth.go
@@ -18,9 +18,10 @@ type AuthCtr struct{}
 // @Description 商户登陆
 // @Accept      json
 // @Produce     json
-// @Param       param body     merchantmod.LoginRequest                              true "参数"
-// @Success     200   {object} response.HTTPResponse{Data=merchantmod.LoginResponse} "成功"
-// @Failure     500   {object} response.HTTPResponse                                 "失败"
+// @Param       param    body     merchantmod.LoginRequest                              true  "参数"
+// @param       language header   string                                                false "语言" default(zh-CN)
+// @Success     200      {object} response.HTTPResponse{Data=merchantmod.LoginResponse} "成功"
+// @Failure     500      {object} response.HTTPResponse                                 "失败"
 // @Router      /auth/login [post]
 func (this AuthCtr) Login(c context.MerchantContext) {
 	var r merchantmod.LoginRequest
@@ -49,7 +50,8 @@ func (this AuthCtr) Login(c context.MerchantContext) {
 // @Description 商户注销
 // @Accept      json
 // @Produce     json
-// @Param       param body merchantmod.LogoutRequest true "参数"
+// @Param       param    body   merchantmod.LogoutRequest true  "参数"
+// @param       language header string                    false "语言" default(zh-CN)
 // @Security    Auth
 // @Success     200 {object} response.HTTPResponse{Data=merchantmod.LogoutResponse} "成功"
 // @Failure     500 {object} response.HTTPResponse                                  "失败"
@@ -76,9 +78,10 @@ func (AuthCtr) Logout(c context.MerchantContext) {
 // @Description 商户注册
 // @Accept      json
 // @Produce     json
-// @Param       param body     merchantmod.RegisterRequest                              true "参数"
-// @Success     200   {object} response.HTTPResponse{Data=merchantmod.RegisterResponse} "成功"
-// @Failure     500   {object} response.HTTPResponse                                    "失败"
+// @Param       param    body     merchantmod.RegisterRequest                              true  "参数"
+// @param       language header   string                                                   false "语言" default(zh-CN)
+// @Success     200      {object} response.HTTPResponse{Data=merchantmod.RegisterResponse} "成功"
+// @Failure     500      {object} response.HTTPResponse                                    "失败"
 // @Router      /auth/register [post]
 func (this AuthCtr) Register(c context.MerchantContext) {
 	var r merchantmod.RegisterRequest
