# controller/merchantctr/tag.go
@@ -16,9 +16,10 @@ type TagCtr struct{}
 // @Description 添加标签
 // @Accept      json
 // @Produce     json
-// @Param       param body     merchantmod.TagAddRequest                              true  "参数"
-// @param       hoken header   string                                                 false "hoken"
-// @Success     200   {object} response.HTTPResponse{Data=merchantmod.TagAddResponse} "成功"
+// @Param       param    body     merchantmod.TagAddRequest                              true  "参数"
+// @param       hoken    header   string                                                 false "hoken"
+// @param       language header   string                                                 false "语言" default(zh-CN)
+// @Success     200      {object} response.HTTPResponse{Data=merchantmod.TagAddResponse} "成功"
 // @Security    Auth
 // @Failure     500 {object} response.HTTPResponse "失败"
 // @Router      /commodity/tag/add [post]
@@ -44,9 +45,10 @@ func (TagCtr) Add(c context.MerchantContext) {
 // @Description 删除标签
 // @Accept      json
 // @Produce     json
-// @Param       param body     merchantmod.TagDelRequest                              true  "参数"
-// @param       hoken header   string                                                 false "hoken"
-// @Success     200   {object} response.HTTPResponse{Data=merchantmod.TagDelResponse} "成功"
+// @Param       param    body     merchantmod.TagDelRequest                              true  "参数"
+// @param       hoken    header   string                                                 false "hoken"
+// @param       language header   string                                                 false "语言" default(zh-CN)
+// @Success     200      {object} response.HTTPResponse{Data=merchantmod.TagDelResponse} "成功"
 // @Security    Auth
 // @Failure     500 {object} response.HTTPResponse "失败"
 // @Router      /commodity/tag/del [post]
